k8s/traefik-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`fastapi.local`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    kind: Rule
    # This line connects the middleware to the route
    middlewares:
      - name: dashboard-auth
    services:
    - name: api@internal
      kind: TraefikService
